fix bredscrumb on mobile and add clsoe menu bar on click  and add hide img on close modal map

--- a/asmart/client/components/elements/Breadcrumbs.sass
+++ b/asmart/client/components/elements/Breadcrumbs.sass
@@ -16,7 +16,11 @@
       border: none
 
 
+@media (max-width: 993px)
 
-
+  ul.breadcrumbs.d-flex.align-items-center.w-100
+    display: block!important
+    li
+      display: inline-block!important
 
 
