--- a/asmart/client/components/layouts/MapBlock/style.sass
+++ b/asmart/client/components/layouts/MapBlock/style.sass
@@ -111,7 +111,7 @@
 
     .content-map-content
       padding: 0 20px 20px 20px
-
+      min-height: 180px
   .slick-dots
     bottom: -30px
 
@@ -194,3 +194,5 @@
 
     .map-full
       padding-top: 40px
+
+
