--- a/asmart/client/components/layouts/Modal/style.sass
+++ b/asmart/client/components/layouts/Modal/style.sass
@@ -71,4 +71,4 @@
       width: 100%
 
     h3
-      white-space: inherit
+      white-space: inherit!important
