--- a/asmart/client/components/layouts/ServiceBlock/style.sass
+++ b/asmart/client/components/layouts/ServiceBlock/style.sass
@@ -110,6 +110,10 @@
 
     &.active
       display: block
+@media (max-width: 993px)
+  .service-block
+    .item-wrap
+      min-height: 132px
 
 @media (max-width: 768px)
   .service-single-page
